--- a/Neural_Machine_Translation.ipynb
+++ b/Neural_Machine_Translation.ipynb
@@ -8499,7 +8499,7 @@
         "            (1) Compute the attention scores for dec_hs & enc_output\n",
         "                    - permute the dimensions of the tensors in order to pass them through linear layers\n",
         "                    - Output size: [batch_size, max_len_src, 1]\n",
-        "            (2) Compute attention_weights by taking a softmax over your scores to normalize the distribution (Make sure that after softmax the normalized scores add up to 1)\n",
+        "            (2) Compute attention_weights by taking a softmax over the scores to normalize the distribution\n",
         "                    - Output size: [batch_size, max_len_src, 1]\n",
         "            (3) Compute context_vector from attention_weights & enc_output\n",
         "                    - find it helpful to use torch.sum & element-wise multiplication (* operator)\n",
@@ -8526,7 +8526,7 @@
         "        Returns:\n",
         "            fc_out: (Unnormalized) output distribution [batch_size, vocab_size]\n",
         "            dec_hs: Decoder hidden state; [1, batch_size, hidden_units]\n",
-        "            attention_weights: The attention weights you have learned; [batch_size, max_len_src, 1]\n",
+        "            attention_weights: The attention weights that have learned; [batch_size, max_len_src, 1]\n",
         "\n",
         "        Steps:\n",
         "            (1) Compute the context vector & attention weights by calling self.compute_attention(...) on the appropriate input\n",
@@ -9223,10 +9223,10 @@
         "        decoder: RnnDecoder object\n",
         "        src: [max_src_length, batch_size] the source sentences to translate\n",
         "        max_decode_len: The maximum desired length (int) of the target translated sentences\n",
-        "        device: the device the torch tensors are on (need to call x.to(device) for some of your tensors)\n",
+        "        device: the device the torch tensors are on (need to call x.to(device) for some of the tensors)\n",
         "\n",
         "    Returns:\n",
-        "        curr_output: [batch_size, max_decode_len] containing your predicted translated sentences\n",
+        "        curr_output: [batch_size, max_decode_len] containing the predicted translated sentences\n",
         "        curr_predictions: [batch_size, max_decode_len, trg_vocab_size] containing the (unnormalized) probabilities of each\n",
         "            token in the vocabulary at each time step\n",
         "    \"\"\"\n",
@@ -9289,33 +9289,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J4ReaqUKIeHH",
-        "outputId": "d7457243-0f25-4a47-ba8c-18a120eef7cb"
+        "outputId": "46dce2cb-9b27-4111-db2e-1d057da8dade"
       },
-      "execution_count": 44,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Source sentence: <start> 汤 姆 被 玛 丽 说 的 话 给 难 倒 了 。 <end>\n",
-            "Target sentence: <start> tom was puzzled by what mary said . <end>\n",
-            "Predicted sentence: <start> tom was puzzled by what mary was puzzled by what mary was puzzled by what mary was puzzled by what mary was puzzled by what mary was puzzled by what mary was puzzled by what\n",
+            "Source sentence: <start> 我 还 在 读 书 。 <end>\n",
+            "Target sentence: <start> i'm still reading . <end>\n",
+            "Predicted sentence: <start> i'm still reading . <end>\n",
             "----------------\n",
-            "Source sentence: <start> 这 个 位 子 空 着 吗 ？ <end>\n",
-            "Target sentence: <start> is this seat available ? <end>\n",
-            "Predicted sentence: <start> is this flower ? <end>\n",
+            "Source sentence: <start> 聰 明 人 會 從 自 己 的 錯 誤 中 受 益 。 <end>\n",
+            "Target sentence: <start> a wise man profits from his mistakes . <end>\n",
+            "Predicted sentence: <start> a wise man profits from his lie . <end>\n",
             "----------------\n",
-            "Source sentence: <start> 叫 救 护 车 。 <end>\n",
-            "Target sentence: <start> call an ambulance . <end>\n",
-            "Predicted sentence: <start> call a car . <end>\n",
+            "Source sentence: <start> 这 是 篇 信 息 量 很 大 的 文 章 。 <end>\n",
+            "Target sentence: <start> this is a very informative article . <end>\n",
+            "Predicted sentence: <start> this is a very informative article . <end>\n",
             "----------------\n",
-            "Source sentence: <start> 我 从 窗 口 爬 进 来 的 。 <end>\n",
-            "Target sentence: <start> i climbed in through the window . <end>\n",
-            "Predicted sentence: <start> i took it down from the window . <end>\n",
+            "Source sentence: <start> 她 警 告 了 他 不 要 一 個 人 去 。 <end>\n",
+            "Target sentence: <start> she warned him not to go alone . <end>\n",
+            "Predicted sentence: <start> she warned him not to go alone . <end>\n",
             "----------------\n",
-            "Source sentence: <start> 会 议 结 束 了 。 <end>\n",
-            "Target sentence: <start> the meeting ended . <end>\n",
-            "Predicted sentence: <start> the meeting ended . <end>\n",
+            "Source sentence: <start> 湯 姆 不 吃 紅 肉 <end>\n",
+            "Target sentence: <start> tom doesn't eat red meat . <end>\n",
+            "Predicted sentence: <start> tom doesn't eat pork . <end>\n",
             "----------------\n"
           ]
         }
@@ -9570,7 +9570,7 @@
         "            num_layers: the number of Transformer Decoder layers\n",
         "            dim_feedforward: the dimension of the feedforward network models in the Transformer\n",
         "            max_len_trg: maximum length of the target sentences\n",
-        "            device: the working device (you may need to map your postional embedding to this device)\n",
+        "            device: the working device\n",
         "            dropout: the dropout to be applied. Default=0.1.\n",
         "        \"\"\"\n",
         "        self.trg_vocab = trg_vocab\n",
@@ -10161,33 +10161,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O-woppQgMLkx",
-        "outputId": "fac10a11-bf28-40be-dcf0-2bad68263ccc"
+        "outputId": "5c3c224a-81f7-43fc-ac10-d852de5af834"
       },
-      "execution_count": 54,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Source sentence: <start> 你 们 共 住 一 个 房 间 吗 ？ <end>\n",
-            "Target sentence: <start> do you share a room ? <end>\n",
-            "Predicted sentence: <start> do you share a room ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end>\n",
+            "Source sentence: <start> 會 用 電 腦 是 一 個 好 處 。 <end>\n",
+            "Target sentence: <start> it is an advantage to be able to use a computer . <end>\n",
+            "Predicted sentence: <start> the committee is a good dancer . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> .\n",
             "----------------\n",
-            "Source sentence: <start> 汤 姆 不 知 道 玛 丽 说 的 是 真 话 还 是 假 话 。 <end>\n",
-            "Target sentence: <start> tom doesn't know whether mary is telling the truth or not . <end>\n",
-            "Predicted sentence: <start> tom didn't know mary was really handsome . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end>\n",
+            "Source sentence: <start> 再 來 一 輪 怎 麼 樣 ？ <end>\n",
+            "Target sentence: <start> how about another round ? <end>\n",
+            "Predicted sentence: <start> what would you like to buy a movie ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ? <end> ?\n",
             "----------------\n",
-            "Source sentence: <start> 他 們 在 小 學 時 就 是 朋 友 了 。 <end>\n",
-            "Target sentence: <start> they became friends in elementary school . <end>\n",
-            "Predicted sentence: <start> they studied english . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end>\n",
+            "Source sentence: <start> 我 不 認 為 這 是 你 的 座 位 。 <end>\n",
+            "Target sentence: <start> i didn't think this was your seat . <end>\n",
+            "Predicted sentence: <start> i don't know the problem . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> your problem . <end> . <end> . <end> . <end>\n",
             "----------------\n",
-            "Source sentence: <start> 我 們 沒 有 看 著 。 <end>\n",
-            "Target sentence: <start> we're not looking . <end>\n",
-            "Predicted sentence: <start> we haven't seen a look at all . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end>\n",
+            "Source sentence: <start> 我 希 望 去 夏 威 夷 。 <end>\n",
+            "Target sentence: <start> i wish to go to hawaii . <end>\n",
+            "Predicted sentence: <start> i wish i went to the hospital . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end>\n",
             "----------------\n",
-            "Source sentence: <start> 多 麼 強 的 風 啊 ！ <end>\n",
-            "Target sentence: <start> what a strong wind ! <end>\n",
-            "Predicted sentence: <start> how much ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> ! <end> !\n",
+            "Source sentence: <start> 省 下 了 一 分 錢 ， 就 等 於 賺 了 一 分 錢 。 <end>\n",
+            "Target sentence: <start> a penny saved is a penny earned . <end>\n",
+            "Predicted sentence: <start> a penny earned is a penny for families . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> . <end> .\n",
             "----------------\n"
           ]
         }
